--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <a class="link-s" href="#">Ocultar Elementos</a>
         <a class="link-s" href="#">Colores de fondo</a>
     </div>
-    <div style="margin-left: 25%; padding-top: 11vh;" class="fc-r5 p-5 par-5">
+    <div style="margin-left: 25%; padding-top: 11vh;" class="cf-r5 p-5 par-5">
         <span>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rem, consectetur distinctio labore mollitia ipsa quibusdam magnam ab illum libero iure eius omnis quis cupiditate soluta iusto cumque, accusamus saepe? Fuga.
         Sequi quisquam commodi vero laudantium. Quae quam quia, quibusdam libero itaque accusamus qui debitis dolore voluptate dicta illo architecto accusantium necessitatibus hic! Laboriosam ipsum incidunt consequuntur, esse placeat dicta dignissimos?
         Aperiam tempora error dolore, totam obcaecati quo dolor reprehenderit id suscipit saepe nisi expedita libero, modi eos? Debitis corporis adipisci laboriosam soluta odit deleniti commodi, consectetur dicta, dolore, quis ipsa!
