--- a/enlaces/tarjetas.html
+++ b/enlaces/tarjetas.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="/MKLibrary/scss/reset.css">
     <link rel="stylesheet" href="/MKLibrary/scss/style.css">
 
-    <title>Document</title>
+    <title>TARJETAS</title>
 </head>
 <body class="ttxt-Arial">
     <header class="fondo-menu fj">
@@ -28,7 +28,7 @@
         <a class="link-s" href="#">Botones</a>
         <a class="link-s" href="#">Formularios</a>
         <a class="link-s" href="#">Tarjetas</a>
-        <a class="link-s" href="/MKLibrary/enlaces/tarjetas.html">Alertas</a>
+        <a class="link-s" href="#">Alertas</a>
         <a class="link-s" href="#">Barras de Navegacion</a>
         <a class="link-s" href="#">Badges</a>
         <a class="link-s" href="#">Containers</a>
