Modificacion de redirecion de boton en el index

--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
         <h1 class="sf-3 gf p-3">CREAR COMPONENTES</h1>
         <a class="link-s sf-2" href="#">Botones</a>
         <a class="link-s sf-2" href="#">Formularios</a>
-        <a class="link-s sf-2" href="#">Tarjetas</a>
-        <a class="link-s sf-2" href="/MKLibrary/enlaces/tarjetas.html">Alertas</a>
+        <a class="link-s sf-2" href="/MKLibrary/enlaces/tarjetas.html">Tarjetas</a>
+        <a class="link-s sf-2" href="#">Alertas</a>
         <a class="link-s sf-2" href="#">Barras de Navegacion</a>
         <a class="link-s sf-2" href="#">Badges</a>
         <a class="link-s sf-2" href="#">Containers</a>
