Solucion a un error

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="navbar ">
             <img   class="ig p-3" src="img/1.png"   alt="MK LIBRARY" >
             <ul>
-                <li class="etiqueta rde-l"><a class="t-none"  href="#">INICIO</a></li>
+                <li class="etiqueta rde-s"><a class="t-none"  href="#">INICIO</a></li>
                 <li class="etiqueta rde-s"><a class="t-none" href="#">CONTACTOS</a></li>
                 <li class="etiqueta rde-s"> <a class="t-none" href="#">ACERCA DE</a></li>
                 <li class="etiqueta rde-s"> <a class="t-none" href="#">REDES SOCIALES</a></li>
