--- a/enlaces/menus.html
+++ b/enlaces/menus.html
@@ -31,7 +31,7 @@
         <a class="link-s sf-2" href="/MKLibrary/enlaces/tarjetas.html">Tarjetas</a>
         <a class="link-s sf-2" href="#">Alertas</a>
         <a class="link-s sf-2" href=" /MKLibrary/enlaces/menus.html">Barras de Navegacion</a>
-        <a class="link-s sf-2" href="#">Badges</a>
+        <a class="link-s sf-2" href="/MKLibrary/enlaces/badges.html">Badges</a>
         <a class="link-s sf-2" href="#">Containers</a>
 
         <h1 class="sf-3 gf p-3">CLASES UTILITARIAS</h1>
