--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <a class="link-s sf-2" href="#">Botones</a>
         <a class="link-s sf-2" href="#">Formularios</a>
         <a class="link-s sf-2" href="/MKLibrary/enlaces/tarjetas.html">Tarjetas</a>
-        <a class="link-s sf-2" href="#">Alertas</a>
+        <a class="link-s sf-2" href="/MKLibrary/enlaces/alertar.html">Alertas</a>
         <a class="link-s sf-2" href="#">Barras de Navegacion</a>
         <a class="link-s sf-2" href="#">Badges</a>
         <a class="link-s sf-2" href="#">Containers</a>
