Modificacion de documentacion de alertas

--- a/enlaces/alertar.html
+++ b/enlaces/alertar.html
@@ -92,7 +92,7 @@
                 <span><br> <</span>/div>
             </div>
         </div>
-        <span class="sf-5 mab-5">Alertas con links</span>
+        <span class="sf-5 mab-5 mar-5">Alertas con links</span>
         <span class="sf-2 mab-5">Utiliza la clase <span class="color-font-peligro">.alerta-link</span> para para que los enlaces obtengan el color referente igual a cualquier alerta.</span>
         <div class="mde-5">
                <!-- Alerta de informacion normal -->
@@ -144,6 +144,13 @@
                 <span><</span>a href="#" class="alerta-link">informacion visite aqui
                 <span><</span>/a>
                 <span><br> <</span>/div>
+            </div>
+        </div>
+        <span class="sf-5 mab-5 mar-5">Iconos</span>
+        <span class="sf-2 mab-5">Puedes utilizar iconos en tus alertas, si tienes una imagen en formato sgv puedes personalizar el icono, pero ahora te dejamos unas alertas con unos iconos.</span>
+        <div class="ttxt-Arial sf-2" style="background-color: rgb(243, 243, 243); border: 1px solid rgb(153, 153, 153);">
+            <div class="mde-5">
+
             </div>
         </div>
     </div>
