--- a/enlaces/alertar.html
+++ b/enlaces/alertar.html
@@ -43,7 +43,7 @@
         <a class="link-s sf-2" href="#">Ocultar Elementos</a>
         <a class="link-s sf-2" href="#">Colores de fondo</a>
     </div>
-    <div style="margin-left: 19.7%; padding-top: 11vh; height: 205vh; display: flex; flex-direction: column;" class="cf-r5 p-5 par-5">
+    <div style="margin-left: 19.7%; padding-top: 11vh; height: 330vh; display: flex; flex-direction: column;" class="cf-r5 p-5 par-5">
         <span class="sf-5 mab-5">Alertas</span>
         <span class="sf-3 ta-justify mab-5">Proporciona mensajes de retroalimentación contextuales para las acciones típicas de los usuarios con mensajes de alerta disponibles y flexibles.</span>
         <span class="sf-3 gf mab-5">Ejemplos</span>
@@ -148,9 +148,99 @@
         </div>
         <span class="sf-5 mab-5 mar-5">Iconos</span>
         <span class="sf-2 mab-5">Puedes utilizar iconos en tus alertas, si tienes una imagen en formato sgv puedes personalizar el icono, pero ahora te dejamos unas alertas con unos iconos.</span>
+        <div class="mde-5">
+            <div class="alerta alerta-informacion m-5">
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" viewBox="0 0 16 16">
+                    <path d="M8 16A8 8 0 1 0 8 0a8 8 0 0 0 0 16zm.93-9.412-1 4.705c-.07.34.029.533.304.533.194 0 .487-.07.686-.246l-.088.416c-.287.346-.92.598-1.465.598-.703 0-1.002-.422-.808-1.319l.738-3.468c.064-.293.006-.399-.287-.47l-.451-.081.082-.381 2.29-.287zM8 5.5a1 1 0 1 1 0-2 1 1 0 0 1 0 2z"/>
+                </svg>
+                Esta es una alerta de informacion
+            </div>
+            <!-- Alerta de peligro -->
+            <div class="alerta alerta-peligro m-5">
+                <svg xmlns="http://www.w3.org/200 svg" width="24" height="24" fill="currentColor" viewBox="0 0 16 16">
+                    <path d="M8.982 1.566a1.13 1.13 0 0 0-1.96 0L.165 13.233c-.457.778.091 1.767.98 1.767h13.713c.889 0 1.438-.99.98-1.767L8.982 1.566zM8 5c.535 0 .954.462.9.995l-.35 3.507a.552.552 0 0 1-1.1 0L7.1 5.995A.905.905 0 0 1 8 5zm.002 6a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/>
+                  </svg>
+                Es una advertencia de peligro!
+            </div>
+            <!-- Alerta de advertencia -->
+            <div class="alerta alerta-advertencia m-5">
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" viewBox="0 0 16 16">
+                    <path d="M8.982 1.566a1.13 1.13 0 0 0-1.96 0L.165 13.233c-.457.778.091 1.767.98 1.767h13.713c.889 0 1.438-.99.98-1.767L8.982 1.566zM8 5c.535 0 .954.462.9.995l-.35 3.507a.552.552 0 0 1-1.1 0L7.1 5.995A.905.905 0 0 1 8 5zm.002 6a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/>
+                  </svg>
+                Es una advertencia!
+            </div>
+            <!-- Alerta de exito -->
+            <div class="alerta alerta-completado m-5">
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" viewBox="0 0 16 16">
+                    <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zm-3.97-3.03a.75.75 0 0 0-1.08.022L7.477 9.417 5.384 7.323a.75.75 0 0 0-1.06 1.06L6.97 11.03a.75.75 0 0 0 1.079-.02l3.992-4.99a.75.75 0 0 0-.01-1.05z"/>
+                  </svg>
+                Se a completado satisfactoriamente
+            </div>
+        </div>
         <div class="ttxt-Arial sf-2" style="background-color: rgb(243, 243, 243); border: 1px solid rgb(153, 153, 153);">
-            <div class="mde-5">
+            <div class="m-5">
+                <span><</span>div
+                <span>class</span>=<span>"alerta alerta-informacion"</span><span>></span>
+                <br>&nbsp &nbsp 
+                <span><</span>svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" viewBox="0 0 16 16">
+                <br>&nbsp &nbsp&nbsp &nbsp
+                <span><</span>path d="M8 16A8 8 0 1 0 8 0a8 8 0 0 0 0 16zm.93-9.412-1 4.705c-.07.34.029.533.304.533.194 0 .487-.07.686-.246l-.088.416c-.287.346-.92.598-1.465.598-.703 0-1.002-.422-.808-1.319l.738-3.468c.064-.293.006-.399-.287-.47l-.451-.081.082-.381 2.29-.287zM8 5.5a1 1 0 1 1 0-2 1 1 0 0 1 0 2z"/>
+                <span><br>&nbsp &nbsp<</span>/svg>
+                <br> Esta es una alerta de informacion
+                <span><br> <</span>/div>
+            </div>
+            <div class="m-5">
+                <span><</span>div
+                <span>class</span>=<span>"alerta alerta-peligro"</span><span>></span>
+                <br>&nbsp &nbsp 
+                <span><</span>svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" viewBox="0 0 16 16">
+                <br>&nbsp &nbsp&nbsp &nbsp
+                <span><</span>path d="M8.982 1.566a1.13 1.13 0 0 0-1.96 0L.165 13.233c-.457.778.091 1.767.98 1.767h13.713c.889 0 1.438-.99.98-1.767L8.982 1.566zM8 5c.535 0 .954.462.9.995l-.35 3.507a.552.552 0 0 1-1.1 0L7.1 5.995A.905.905 0 0 1 8 5zm.002 6a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/>
+                <span><br>&nbsp &nbsp<</span>/svg>
+                <br> Esta es una alerta de peligro
+                <span><br> <</span>/div>
+            </div>
+            <div class="m-5">
+                <span><</span>div
+                <span>class</span>=<span>"alerta alerta-advertencia"</span><span>></span>
+                <br>&nbsp &nbsp 
+                <span><</span>svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" viewBox="0 0 16 16">
+                <br>&nbsp &nbsp&nbsp &nbsp
+                <span><</span>path d="M8.982 1.566a1.13 1.13 0 0 0-1.96 0L.165 13.233c-.457.778.091 1.767.98 1.767h13.713c.889 0 1.438-.99.98-1.767L8.982 1.566zM8 5c.535 0 .954.462.9.995l-.35 3.507a.552.552 0 0 1-1.1 0L7.1 5.995A.905.905 0 0 1 8 5zm.002 6a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/>
+                <span><br>&nbsp &nbsp<</span>/svg>
+                <br> Es una advertencia!
+                <span><br> <</span>/div>
+            </div>
+            <div class="m-5">
+                <span><</span>div
+                <span>class</span>=<span>"alerta alerta-completado"</span><span>></span>
+                <br>&nbsp &nbsp 
+                <span><</span>svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" viewBox="0 0 16 16">
+                <br>&nbsp &nbsp&nbsp &nbsp
+                <span><</span>path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zm-3.97-3.03a.75.75 0 0 0-1.08.022L7.477 9.417 5.384 7.323a.75.75 0 0 0-1.06 1.06L6.97 11.03a.75.75 0 0 0 1.079-.02l3.992-4.99a.75.75 0 0 0-.01-1.05z"/>
+                <span><br>&nbsp &nbsp<</span>/svg>
+                <br> Se a completado satisfactoriamente
+                <span><br> <</span>/div>
+            </div>
+        </div>
+        <span class="sf-5 mab-5 mar-5">Alerta con informacion adicional</span>
+        <span class="sf-2 mab-5">Las alertas también pueden contener elementos HTML adicionales como encabezados y párrafos.</span>
+        <div class="mde-5">
+            <div class="alerta alerta-completado">
+                <h1 class="gf mab-5 mar-5">Bien hecho!</h1>
+                <p class="ttxt-Arial">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Et a ex assumenda. Suscipit tenetur soluta, animi reiciendis nobis fuga dolore illo perspiciatis ex, dolores similique, libero impedit commodi eum labore?</p>
+            </div>
+        </div>
+        <div class="ttxt-Arial sf-2" style="background-color: rgb(243, 243, 243); border: 1px solid rgb(153, 153, 153);">
+            <div class="m-5">
+                <span><</span>div
+                <span>class</span>=<span>"alerta alerta-Completado"</span><span>></span>
+                <br>&nbsp &nbsp <span><</span>h1> Bien Hecho!
+                <span><</span>/h1><br>&nbsp &nbsp
+                <span><</span>p class="ttxt-Arial"> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Et a ex assumenda. Suscipit tenetur soluta, animi reiciendis nobis<br>&nbsp &nbsp fuga dolore illo perspiciatis ex, dolores similique, libero impedit commodi eum labore?
+                <span><</span>/p>
 
+                <span><br> <</span>/div>
             </div>
         </div>
     </div>
