Se agrego el link de Crear margenes y paddings

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
         <a class="link-s sf-2" href="#">Modificar tamaño,grosor</a>
         <a class="link-s sf-2" href="#">Crear Sombras</a>
-        <a class="link-s sf-2 "href="#">Crear Margenes,padding</a>
+        <a class="link-s sf-2 "href="/MKLibrary/enlaces/bordes.html">Crear Margenes,padding</a>
         <a class="link-s sf-2"href="#">Mover elementos</a>
         <a class="link-s sf-2" href="#">Redondear elementos</a>
         <a class="link-s sf-2" href="#">Ocultar Elementos</a>
