--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <h1 class="sf-3 gf p-3">CLASES UTILITARIAS</h1>
 
         <a class="link-s sf-2" href="#">Modificar tamaño,grosor</a>
-        <a class="link-s sf-2" href="#">Crear Sombras</a>
+        <a class="link-s sf-2" href="/MKLibrary/enlaces/sombras.html">Crear Sombras</a>
         <a class="link-s sf-2 "href="/MKLibrary/enlaces/bordes.html">Crear Margenes,padding</a>
         <a class="link-s sf-2"href="#">Mover elementos</a>
         <a class="link-s sf-2" href="#">Redondear elementos</a>
