Se agrego la documentacion de margenes

--- a/enlaces/bordes.html
+++ b/enlaces/bordes.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="/MKLibrary/scss/reset.css">
     <link rel="stylesheet" href="/MKLibrary/scss/style.css">
 
-    <title>Document</title>
+    <title>Crear margenes, padding y bordes</title>
 </head>
 <body class="ttxt-Arial">
     <header class="fondo-menu fj">
@@ -44,7 +44,23 @@
         <a class="link-s sf-2" href="#">Colores de fondo</a>
     </div>
     <div style="margin-left: 19.7%; padding-top: 11vh; height: 87vh;" class="cf-r5 p-5 par-5">
-        <span></span>
-    </div>
+            <h1 class="gf sf-5">Margenes en MKLibrary</h1>
+            <p class="mar-5 sf-3">Los margenes en esta libreria estan divididos en dos tipos <span class="gf">margin general y margin especifico.</span> <span>Cada uno con un prefijo como m-1, mar-1 etc. Donde la m representa el tipo de margen, o los tipos de margen, ejemplo si coloca m-1, se esta diciendo que quiere un margen a los 4 lados o lo que se conoce como un margen general, y el -1 (Guion y un numero que va desde 1 hasta el 5) representa el tamaño en pixeles que desea siendo 1 igual a 13px hasta 5 siendo este de 16px.</span></p>
+
+            <h2 class="gf sf-3 mar-5">Margen general</h2>
+            <p class="mar-5 sf-2">Los margenes generales se declaran en las clases de la siguiente manera:</p>
+            <p class="mar-5 sf-2"><span class="color-font-peligro">m-1</span>: Donde se genera un margin general (top, buttom, left y right) de tamaño 3px</p>
+            <p class="mar-5 sf-2"><span class="color-font-peligro">m-2</span>: Donde se genera un margin general (top, buttom, left y right) de tamaño 7px</p>
+            <p class="mar-5 sf-2"><span class="color-font-peligro">m-3</span>: Donde se genera un margin general (top, buttom, left y right) de tamaño 10px</p>
+            <p class="mar-5 sf-2"><span class="color-font-peligro">m-4</span>: Donde se genera un margin general (top, buttom, left y right) de tamaño 13px</p>
+            <p class="mar-5 sf-2"><span class="color-font-peligro">m-5</span>: Donde se genera un margin general (top, buttom, left y right) de tamaño 16px</p>
+
+            <h2 class="gf sf-3 mar-5">Margen especifico</h2>
+            <p class="mar-5 sf-2">Los margenes especificos cuentan con el mismo tamaño que los bordes generales, con la unica variacion que se debe especificar el sufijo mar, mde, mab y miz que significan:</p>
+            <p class="mar-5 sf-2"><span class="color-font-peligro">mar</span>: Donde se genera un margin top</p>
+            <p class="mar-5 sf-2"><span class="color-font-peligro">mde</span>: Donde se genera un margin right</p>
+            <p class="mar-5 sf-2"><span class="color-font-peligro">mab</span>: Donde se genera un margin general buttom</p>
+            <p class="mar-5 sf-2"><span class="color-font-peligro">miz</span>: Donde se genera un margin general left</p>
+        </div>
 </body>
 </html>
