--- a/enlaces/fuente.html
+++ b/enlaces/fuente.html
@@ -43,7 +43,7 @@
         <a class="link-s sf-2" href="#">Ocultar Elementos</a>
         <a class="link-s sf-2" href="#">Colores de fondo</a>
     </div>
-    <div style="margin-left: 19.7%; padding-top: 11vh; height: 87vh;display: flex; flex-direction: column; " class="cf-r5 p-5 par-5">
+    <div style="margin-left: 19.7%; padding-top: 11vh; height: 500vh;display: flex; flex-direction: column; " class="cf-r5 p-5 par-5">
         <span class="sf-5 mab-5">Fuentes</span>
         <span class="sf-3 ta-justify mab-5">Aqui podras observar las clases para cambiar el tamaño, fuente, color y grosor de la letra para tus paginas</span>
         <span class="sf-3 gf mab-5">Colores</span>
@@ -61,11 +61,44 @@
                 <span class="color-font-oscuro m-5 sf-2">Texto en color oscuro</span>
             </div>
         </div>
+        <span class="sf-2 alert mab-5 mar-5">Codigo</span>
         <div class="ttxt-Arial sf-2" style="background-color: rgb(243, 243, 243); border: 1px solid rgb(153, 153, 153);">
             <div class="m-5">
                 <span><</span>span
                 <span>class</span>=<span>"color-font-primario"</span><span>>Texto en color primario <span><</span>/span></span>
             </div>
+            <div class="m-5">
+                <span><</span>span
+                <span>class</span>=<span>"color-font-secundario"</span><span>>Texto en color secundario <span><</span>/span></span>
+            </div>
+            <div class="m-5">
+                <span><</span>span
+                <span>class</span>=<span>"color-font-terceario"</span><span>>Texto en color terciario<span><</span>/span></span>
+            </div>
+            <div class="m-5">
+                <span><</span>span
+                <span>class</span>=<span>"color-font-informacion"</span><span>>Texto en color de informacion <span><</span>/span></span>
+            </div>
+            <div class="m-5">
+                <span><</span>span
+                <span>class</span>=<span>"color-font-peligro"</span><span>>Texto en color de peligro<span><</span>/span></span>
+            </div>
+            <div class="m-5">
+                <span><</span>span
+                <span>class</span>=<span>"color-font-advertencia"</span><span>>Texto en color de advertencia<span><</span>/span></span>
+            </div>
+            <div class="m-5">
+                <span><</span>span
+                <span>class</span>=<span>"color-font-exito"</span><span>>Texto en color de exito<span><</span>/span></span>
+            </div>
+            <div class="m-5">
+                <span><</span>span
+                <span>class</span>=<span>"color-font-claro"</span><span>>Texto en color claro<span><</span>/span></span>
+            </div>            <div class="m-5">
+                <span><</span>span
+                <span>class</span>=<span>"color-font-oscuro"</span><span>>Texto en color oscuro<span><</span>/span></span>
+            </div>
     </div>
+
 </body>
 </html>
