--- a/enlaces/fuente.html
+++ b/enlaces/fuente.html
@@ -98,6 +98,10 @@
                 <span><</span>span
                 <span>class</span>=<span>"color-font-oscuro"</span><span>>Texto en color oscuro<span><</span>/span></span>
             </div>
+        </div>
+        <span class="sf-3 gf mab-5 mar-5">Colores</span>
+        <span class="sf-2 alert mab-5">Para cambiar el color de la letra se utiliza la clase <span class="color-font-peligro">color-font-</span>"color", ahora un ejemplo:</span>
+ 
     </div>
 
 </body>
