--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
         <a class="link-s sf-2" href="/MKLibrary/enlaces/formularios.html">Formularios</a>
         <a class="link-s sf-2" href="/MKLibrary/enlaces/tarjetas.html">Tarjetas</a>
         <a class="link-s sf-2" href="/MKLibrary/enlaces/alertar.html">Alertas</a>
-        <a class="link-s sf-2" href="#">Barras de Navegacion</a>
-        <a class="link-s sf-2" href="#">Badges</a>
+        <a class="link-s sf-2" href="/MKLibrary/enlaces/menus.html">Barras de Navegacion</a>
+        <a class="link-s sf-2" href="/MKLibrary/enlaces/badges.html">Badges</a>
         <a class="link-s sf-2" href="#">Containers</a>
 
         <h1 class="sf-3 gf p-3">CLASES UTILITARIAS</h1>
