Finalizacion de la documentacion de fuentes

--- a/enlaces/fuente.html
+++ b/enlaces/fuente.html
@@ -43,7 +43,7 @@
         <a class="link-s sf-2" href="#">Ocultar Elementos</a>
         <a class="link-s sf-2" href="#">Colores de fondo</a>
     </div>
-    <div style="margin-left: 19.7%; padding-top: 11vh; height: 500vh;display: flex; flex-direction: column; " class="cf-r5 p-5 par-5">
+    <div style="margin-left: 19.7%; padding-top: 11vh; height: 318vh;display: flex; flex-direction: column; " class="cf-r5 p-5 par-5">
         <span class="sf-5 mab-5">Fuentes</span>
         <span class="sf-3 ta-justify mab-5">Aqui podras observar las clases para cambiar el tamaño, fuente, color y grosor de la letra para tus paginas</span>
         <span class="sf-3 gf mab-5">Colores</span>
@@ -99,9 +99,113 @@
                 <span>class</span>=<span>"color-font-oscuro"</span><span>>Texto en color oscuro<span><</span>/span></span>
             </div>
         </div>
-        <span class="sf-3 gf mab-5 mar-5">Colores</span>
-        <span class="sf-2 alert mab-5">Para cambiar el color de la letra se utiliza la clase <span class="color-font-peligro">color-font-</span>"color", ahora un ejemplo:</span>
- 
+        <span class="sf-3 gf mab-5 mar-5">Tamaños</span>
+        <span class="sf-2 alert mab-5">Existen 5 tamaños para el texto los cuales son:</span>
+        <div class="mde-5">
+            <div class="form" style="background-color: rgb(243, 243, 243);">
+                 <span class="sf-1 m-5">Texto tamaño 1</span>
+                 <span class="sf-2 m-5">Texto tamaño 2</span>
+                 <span class="sf-3 m-5">Texto tamaño 3</span>
+                 <span class="sf-4 m-5">Texto tamaño 4</span>
+                 <span class="sf-5 m-5">Texto tamaño 5</span>
+            </div>
+        </div>
+        <span class="sf-2 alert mab-5 mar-5">Codigo</span>
+        <div class="ttxt-Arial sf-2" style="background-color: rgb(243, 243, 243); border: 1px solid rgb(153, 153, 153);">
+            <div class="m-5">
+                <span><</span>span
+                <span>class</span>="sf-1">Texto tamaño 1<span><</span>/span></span>
+            </div>
+            <div class="m-5">
+                <span><</span>span
+                <span>class</span>="sf-2">Texto tamaño 2<span><</span>/span></span>
+            </div>
+            <div class="m-5">
+                <span><</span>span
+                <span>class</span>="sf-3">Texto tamaño 3<span><</span>/span></span>
+            </div>
+            <div class="m-5">
+                <span><</span>span
+                <span>class</span>="sf-4">Texto tamaño 4<span><</span>/span></span>
+            </div>
+            <div class="m-5">
+                <span><</span>span
+                <span>class</span>="sf-5">Texto tamaño 5<span><</span>/span></span>
+            </div>
+        </div>
+        <span class="sf-3 gf mab-5 mar-5">Fuente de letra</span>
+        <span class="sf-2 alert mab-5">Hay varias fuentes de letras para que el usuario pueda escoger la mejor</span>
+        <div class="mde-5">
+            <div class="form" style="background-color: rgb(243, 243, 243);">
+                 <span class="ttxt-Arial m-5">Texto en Arial</span>
+                 <span class="ttxt-Calibri m-5">Texto en Calibri</span>
+                 <span class="ttxt-GillSans m-5">Texto en GillSans</span>
+                 <span class="ttxt-Times m-5">Texto en Times</span>
+                 <span class="ttxt-Verdana m-5">Texto en Verdana</span>
+            </div>
+        </div>
+        <span class="sf-2 alert mab-5 mar-5">Codigo</span>
+        <div class="ttxt-Arial sf-2" style="background-color: rgb(243, 243, 243); border: 1px solid rgb(153, 153, 153);">
+            <div class="m-5">
+                <span><</span>span
+                <span>class</span>="ttxt-Arial">Texto en Arial<span><</span>/span></span>
+            </div>
+            <div class="m-5">
+                <span><</span>span
+                <span>class</span>="ttxt-Calibri">Texto en Calibri<span><</span>/span></span>
+            </div>
+            <div class="m-5">
+                <span><</span>span
+                <span>class</span>="ttxt-GillSans">Texto en GillSans<span><</span>/span></span>
+            </div>
+            <div class="m-5">
+                <span><</span>span
+                <span>class</span>="ttxt-Times">Texto en Times<span><</span>/span></span>
+            </div>
+            <div class="m-5">
+                <span><</span>span
+                <span>class</span>="ttxt-Verdana">Texto en Verdana<span><</span>/span></span>
+            </div>
+        </div>
+        <span class="sf-3 gf mab-5 mar-5">Alineación de texto</span>
+        <span class="sf-2 alert mab-5">El alineado de texto de llama con la clase <span class="color-font-peligro">ta-</span>"alineado" estos son unos ejemplos</span>
+        <div class="mde-5">
+            <div class="form" style="background-color: rgb(243, 243, 243);">
+                 <span class="ta-center m-5">Texto centrado</span>
+                 <span class="ta-start m-5">Texto en el comienzo</span>
+                 <span class="ta-end m-5">Texto en el final</span>
+                 <span class="ta-justify m-5">Texto justificado</span>
+                 <span class="ta-left m-5">Texto a la izquierda</span>
+                 <span class="ta-right m-5">Texto a la derecha</span>
+            </div>
+        </div>
+        <span class="sf-2 alert mab-5 mar-5">Codigo</span>
+        <div class="ttxt-Arial sf-2" style="background-color: rgb(243, 243, 243); border: 1px solid rgb(153, 153, 153);">
+            <div class="m-5">
+                <span><</span>span
+                <span>class</span>="ta-center">Texto centrado<span><</span>/span></span>
+            </div>
+            <div class="m-5">
+                <span><</span>span
+                <span>class</span>="ta-start">Texto en el comienzo<span><</span>/span></span>
+            </div>
+            <div class="m-5">
+                <span><</span>span
+                <span>class</span>="ta-end">Texto en el final<span><</span>/span></span>
+            </div>
+            <div class="m-5">
+                <span><</span>span
+                <span>class</span>="ta-justify">Texto justificado<span><</span>/span></span>
+            </div>
+            <div class="m-5">
+                <span><</span>span
+                <span>class</span>="ta-left">Texto a la izquierda<span><</span>/span></span>
+            </div>
+            <div class="m-5">
+                <span><</span>span
+                <span>class</span>="ta-right">Texto a la derecha<span><</span>/span></span>
+            </div>
+        </div>
     </div>
 
 </body>
