--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="navbar ">
             <img   class="ig p-3" src="img/1.png"   alt="MK LIBRARY" >
             <ul>
-                <li class="etiqueta rde-s"><a class="t-none"  href="#">INICIO</a></li>
+                <li class="etiqueta rde-s"><a class="t-none"  href="/MKLibrary/index.html">INICIO</a></li>
                 <li class="etiqueta rde-s"><a class="t-none" href="#">CONTACTOS</a></li>
                 <li class="etiqueta rde-s"> <a class="t-none" href="#">ACERCA DE</a></li>
                 <li class="etiqueta rde-s"> <a class="t-none" href="#">REDES SOCIALES</a></li>
@@ -41,10 +41,14 @@
         <a class="link-s sf-2"href="#">Mover elementos</a>
         <a class="link-s sf-2" href="#">Redondear elementos</a>
         <a class="link-s sf-2" href="#">Ocultar Elementos</a>
-        <a class="link-s sf-2" href="#">Colores de fondo</a>
+        <a class="link-s sf-2" href="/MKLibrary/enlaces/colores.html">Colores de fondo</a>
     </div>
-    <div style="margin-left: 19.7%; padding-top: 11vh; height: 87vh; " class="cf-r5 p-5 par-5">
-        <span></span>
+    <div style=" margin-left: 19.7%; padding-top: 11vh; height: 87vh; " class="cf-r5 p-5 par-5">
+        <span style=""; class="sf-5 ">MK LIBRARY</span>
+        <img style="margin: 0 auto; padding: 0;" src="/MKLibrary/img/1.png" alt="">
+        <p>
+            
+        </p>
     </div>
 </body>
 </html>
