--- a/enlaces/colores.html
+++ b/enlaces/colores.html
@@ -41,7 +41,7 @@
         <a class="link-s sf-2"href="#">Mover elementos</a>
         <a class="link-s sf-2" href="#">Redondear elementos</a>
         <a class="link-s sf-2" href="#">Ocultar Elementos</a>
-        <a class="link-s sf-2" href="#">Colores de fondo</a>
+        <a class="link-s sf-2" href="/MKLibrary/enlaces/colores.html">Colores de fondo</a>
     </div>
 
 
