--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
         <a class="link-s sf-2" href="/MKLibrary/enlaces/colores.html">Colores de fondo</a>
     </div>
     <div style=" margin-left: 19.7%; padding-top: 11vh; height: 87vh; " class="cf-r5 p-5 par-5">
-        <span style=""; class="sf-5 ">MK LIBRARY</span>
-        <img style="margin: 0 auto; padding: 0;" src="/MKLibrary/img/1.png" alt="">
+        <span  class="sf-5  ">MK LIBRARY</span>
+        <img style="margin: 50px 40px; padding: 0;" src="/MKLibrary/img/1.png" alt="">
         <p>
             
         </p>
