--- a/enlaces/bordes.html
+++ b/enlaces/bordes.html
@@ -43,9 +43,9 @@
         <a class="link-s sf-2" href="#">Ocultar Elementos</a>
         <a class="link-s sf-2" href="#">Colores de fondo</a>
     </div>
-    <div style="margin-left: 19.7%; padding-top: 11vh; height: 100vh;" class="cf-r5 p-5 par-5">
+    <div style="margin-left: 19.7%; padding-top: 11vh; height: 100%;" class="cf-r5 p-5 par-5">
             <h1 class="gf sf-5">Margenes en MKLibrary</h1>
-            <p class="mar-5 sf-3">Los margenes en esta libreria estan divididos en dos tipos <span class="gf">margin general y margin especifico.</span> <span>Cada uno con un prefijo como m-1, mar-1 etc. Donde la m representa el tipo de margen, o los tipos de margen, ejemplo si coloca m-1, se esta diciendo que quiere un margen a los 4 lados o lo que se conoce como un margen general, y el -1 (Guion y un numero que va desde 1 hasta el 5) representa el tamaño en pixeles que desea siendo 1 igual a 13px hasta 5 siendo este de 16px.</span></p>
+            <p class="mar-5 sf-3">Los margenes en esta libreria estan divididos en dos tipos <span class="gf">margin general y margin especifico.</span> <span>Cada uno con un prefijo como m-1, mar-1 etc. Donde la m representa el tipo de margen, o los tipos de margen, ejemplo si coloca m-1, se esta diciendo que quiere un margen a los 4 lados o lo que se conoce como un margen general, y el -1 (Guion y un numero, que este va desde 1 hasta el 5) representa el tamaño en pixeles que desea siendo 1, el mas pequeño, igual a 13px, hasta 5 siendo este de 16px el mas grande.</span></p>
 
             <h2 class="gf sf-3 mar-5">Margen general</h2>
             <p class="mar-5 sf-2">Los margenes generales se declaran en las clases de la siguiente manera:</p>
@@ -59,26 +59,28 @@
             <p class="mar-5 sf-2">Los margenes especificos cuentan con el mismo tamaño que los bordes generales, con la unica variacion que se debe especificar el sufijo mar, mde, mab y miz que significan:</p>
             <p class="mar-5 sf-2"><span class="color-font-peligro">mar</span>: Donde se genera un margin top</p>
             <p class="mar-5 sf-2"><span class="color-font-peligro">mde</span>: Donde se genera un margin right</p>
-            <p class="mar-5 sf-2"><span class="color-font-peligro">mab</span>: Donde se genera un margin general buttom</p>
-            <p class="mar-5 sf-2"><span class="color-font-peligro">miz</span>: Donde se genera un margin general left</p>
-        
-            <h1 class="gf sf-5">Margenes en MKLibrary</h1>
-            <p class="mar-5 sf-3">Los margenes en esta libreria estan divididos en dos tipos <span class="gf">margin general y margin especifico.</span> <span>Cada uno con un prefijo como m-1, mar-1 etc. Donde la m representa el tipo de margen, o los tipos de margen, ejemplo si coloca m-1, se esta diciendo que quiere un margen a los 4 lados o lo que se conoce como un margen general, y el -1 (Guion y un numero que va desde 1 hasta el 5) representa el tamaño en pixeles que desea siendo 1 igual a 13px hasta 5 siendo este de 16px.</span></p>
+            <p class="mar-5 sf-2"><span class="color-font-peligro">mab</span>: Donde se genera un margin buttom</p>
+            <p class="mar-5 sf-2"><span class="color-font-peligro">miz</span>: Donde se genera un margin left</p>
+            <p class="mar-5 sf-2">Un ejemplo de aplicacion seria mar-5 donde le digo que tenga un margen arriba del tipo 5 (16 pixeles)</p>
+            
 
-            <h2 class="gf sf-3 mar-5">Margen general</h2>
-            <p class="mar-5 sf-2">Los margenes generales se declaran en las clases de la siguiente manera:</p>
-            <p class="mar-5 sf-2"><span class="color-font-peligro">m-1</span>: Donde se genera un margin general (top, buttom, left y right) de tamaño 3px</p>
-            <p class="mar-5 sf-2"><span class="color-font-peligro">m-2</span>: Donde se genera un margin general (top, buttom, left y right) de tamaño 7px</p>
-            <p class="mar-5 sf-2"><span class="color-font-peligro">m-3</span>: Donde se genera un margin general (top, buttom, left y right) de tamaño 10px</p>
-            <p class="mar-5 sf-2"><span class="color-font-peligro">m-4</span>: Donde se genera un margin general (top, buttom, left y right) de tamaño 13px</p>
-            <p class="mar-5 sf-2"><span class="color-font-peligro">m-5</span>: Donde se genera un margin general (top, buttom, left y right) de tamaño 16px</p>
+            <h1 class="gf sf-5 par-5 mar-5">Paddings en MKLibrary</h1>
+            <p class="mar-5 sf-3">Los paddings en esta libreria al igual que los margenes se dividen en:<span class="gf"> padding general y padding especifico.</span> <span>Los cuales se identifican con la letra p (para el padding general) acompañado de un guion y un numero (p-1, como ejemplo) que va desde 1 hasta el 5 que representa el tamaño.</span></p>
 
-            <h2 class="gf sf-3 mar-5">Margen especifico</h2>
-            <p class="mar-5 sf-2">Los margenes especificos cuentan con el mismo tamaño que los bordes generales, con la unica variacion que se debe especificar el sufijo mar, mde, mab y miz que significan:</p>
-            <p class="mar-5 sf-2"><span class="color-font-peligro">mar</span>: Donde se genera un margin top</p>
-            <p class="mar-5 sf-2"><span class="color-font-peligro">mde</span>: Donde se genera un margin right</p>
-            <p class="mar-5 sf-2"><span class="color-font-peligro">mab</span>: Donde se genera un margin general buttom</p>
-            <p class="mar-5 sf-2"><span class="color-font-peligro">miz</span>: Donde se genera un margin general left</p>
+            <h2 class="gf sf-3 mar-5">Padding general</h2>
+            <p class="mar-5 sf-2">Los paddings generales se declaran en las clases de la siguiente manera:</p>
+            <p class="mar-5 sf-2"><span class="color-font-peligro">p-1</span>: Donde se genera un padding general (top, buttom, left y right) de tamaño 3px</p>
+            <p class="mar-5 sf-2"><span class="color-font-peligro">p-2</span>: Donde se genera un padding general (top, buttom, left y right) de tamaño 7px</p>
+            <p class="mar-5 sf-2"><span class="color-font-peligro">p-3</span>: Donde se genera un padding general (top, buttom, left y right) de tamaño 10px</p>
+            <p class="mar-5 sf-2"><span class="color-font-peligro">p-4</span>: Donde se genera un padding general (top, buttom, left y right) de tamaño 13px</p>
+            <p class="mar-5 sf-2"><span class="color-font-peligro">p-5</span>: Donde se genera un padding general (top, buttom, left y right) de tamaño 16px</p>
+
+            <h2 class="gf sf-3 mar-5">Padding especifico</h2>
+            <p class="mar-5 sf-2">Los padding especificos cuentan con el mismo tamaño que los generales, solo se debe especificar el sufijo par, pde, pab y piz que significan:</p>
+            <p class="mar-5 sf-2"-><span class="color-font-peligro">mar</span>: Donde se genera un padding top</p>
+            <p class="mar-5 sf-2"><span class="color-font-peligro">mde</span>: Donde se genera un padding right</p>
+            <p class="mar-5 sf-2"><span class="color-font-peligro">mab</span>: Donde se genera un padding buttom</p>
+            <p class="mar-5 sf-2"><span class="color-font-peligro">miz</span>: Donde se genera un padding left</p>
         </div>
 </body>
 </html>
