--- a/enlaces/redondeo.html
+++ b/enlaces/redondeo.html
@@ -43,8 +43,79 @@
         <a class="link-s sf-2" href="#">Ocultar Elementos</a>
         <a class="link-s sf-2" href="#">Colores de fondo</a>
     </div>
-    <div style="margin-left: 19.7%; padding-top: 11vh; height: 87vh; " class="cf-r5 p-5 par-5">
-        <span></span>
+    <div style="margin-left: 19.7%; padding-top: 11vh; height: 218vh;display: flex; flex-direction: column;" class="cf-r5 p-5 par-5">
+        <span class="sf-5 mab-5">Redondeo de elementos</span>
+        <span class="sf-3 ta-justify mab-5">Para hacer redondeo de elementos solo hay que llamar la clase <span class="color-font-peligro">rde-</span>"tamaño" ya que hay varios tamaños de redondeo.</span>
+        <div class="mde-5">
+            <div class="rde-s p-5 b-oscuro-1 sf-4 m-5 cf-claro">Elemento redondeado a tamaño S</div>
+            <div class="rde-m p-5 b-oscuro-1 sf-4 m-5 cf-claro">Elemento redondeado a tamaño M</div>
+            <div class="rde-l p-5 b-oscuro-1 sf-4 m-5 cf-claro">Elemento redondeado a tamaño L</div>
+            <div class="rde-xl p-5 b-oscuro-1 sf-4 m-5 cf-claro">Elemento redondeado a tamaño XL</div>
+            <div class="rde-xxl p-5 b-oscuro-1 sf-5 m-5 cf-claro">Elemento redondeado a tamaño XXL</div>
+        </div>
+        <span class="sf-2 alert mab-5 mar-5">Codigo</span>
+        <div class="ttxt-Arial sf-2" style="background-color: rgb(243, 243, 243); border: 1px solid rgb(153, 153, 153);">
+            <div class="m-5">
+                <span><</span>div
+                <span>class</span>="rde-s p-5 b-oscuro-1 sf-4 m-5">Elemento redondeado a tamaño S<span><</span>/div></span>
+            </div>
+            <div class="m-5">
+                <span><</span>div
+                <span>class</span>="rde-m p-5 b-oscuro-1 sf-4 m-5">Elemento redondeado a tamaño M<span><</span>/div></span>
+            </div>
+            <div class="m-5">
+                <span><</span>div
+                <span>class</span>="rde-l p-5 b-oscuro-1 sf-4 m-5">Elemento redondeado a tamaño L<span><</span>/div></span>
+            </div>
+            <div class="m-5">
+                <span><</span>div
+                <span>class</span>="rde-xl p-5 b-oscuro-1 sf-4 m-5">Elemento redondeado a tamaño XL<span><</span>/div></span>
+            </div>
+            <div class="m-5">
+                <span><</span>div
+                <span>class</span>="rde-xxl p-5 b-oscuro-1 sf-4 m-5">Elemento redondeado a tamaño XXL<span><</span>/div></span>
+            </div>
+        </div>
+        <span class="sf-3 gf mab-5 mar-5">Redondeo de elementos por esquinas individuales</span>
+        <span class="sf-2 alert mab-5">Para redondear elementos por esquinas indiviuales hay que llamar a la clase <span class="color-font-peligro">rde-"esquina a redondear"-"tamaño"</span> y asi redondear por cada esquina, ejemplo</span>
+        <div class="mde-5">
+            <div class="rde-tl-m p-5 b-oscuro-1 sf-4 m-5 cf-claro">Elemento redondeado de esquina superior izquierda</div>
+            <div class="rde-tr-m p-5 b-oscuro-1 sf-4 m-5 cf-claro">Elemento redondeado de esquina superior derecha</div>
+            <div class="rde-bl-m p-5 b-oscuro-1 sf-4 m-5 cf-claro">Elemento redondeado de esquina inferior izquierda</div>
+            <div class="rde-bl-m p-5 b-oscuro-1 sf-4 m-5 cf-claro">Elemento redondeado de esquina inferior derecha</div>
+        </div>
+        <span class="sf-2 alert mab-5 mar-5">Codigo</span>
+        <div class="ttxt-Arial sf-2" style="background-color: rgb(243, 243, 243); border: 1px solid rgb(153, 153, 153);">
+            <div class="m-5">
+                <span><</span>div
+                <span>class</span>="rde-tl-m p-5 b-oscuro-1 sf-4 m-5">Elemento redondeado de esquina superior izquierda<span><</span>/div></span>
+            </div>
+            <div class="m-5">
+                <span><</span>div
+                <span>class</span>="rde-tr-m p-5 b-oscuro-1 sf-4 m-5">Elemento redondeado de esquina superior derecha<span><</span>/div></span>
+            </div>
+            <div class="m-5">
+                <span><</span>div
+                <span>class</span>="rde-bl-m p-5 b-oscuro-1 sf-4 m-5">Elemento redondeado de esquina inferior izquierda<span><</span>/div></span>
+            </div>
+            <div class="m-5">
+                <span><</span>div
+                <span>class</span>="rde-br-m p-5 b-oscuro-1 sf-4 m-5">Elemento redondeado de esquina inferior derecha<span><</span>/div></span>
+            </div>
+        </div>
+        <span class="sf-3 gf mab-5 mar-5">Circulos</span>
+        <span class="sf-2 alert mab-5">Los circulos de crean llamando la clase <span class="color-font-peligro">rde-circle</span> aqui un ejemplo</span>
+        <div class="mde-5">
+            <div class="rde-circle p-5 b-oscuro-1 sf-4 m-5 ta-center cf-claro" style="width: 100px; height: 100px;">E</div>
+        </div>
+        <span class="sf-2 alert mab-5 mar-5">Codigo</span>
+        <div class="ttxt-Arial sf-2" style="background-color: rgb(243, 243, 243); border: 1px solid rgb(153, 153, 153);">
+            <div class="m-5">
+                <span><</span>div
+                <span>class</span>="rde-circle p-5 b-oscuro-1 sf-4 m-5">E<span><</span>/div></span>
+            </div>
+        </div>
+        <div class="alerta alerta-informacion mar-5">Para que el circulo se logre aprecia tanto el width como el height tienen que ser iguales de tamaño</div>
     </div>
 </body>
 </html>
