--- a/enlaces/fuente.html
+++ b/enlaces/fuente.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="/MKLibrary/scss/reset.css">
     <link rel="stylesheet" href="/MKLibrary/scss/style.css">
 
-    <title>Document</title>
+    <title>Documentación MKLibrary</title>
 </head>
 <body class="ttxt-Arial">
     <header class="fondo-menu fj">
