--- a/index.html
+++ b/index.html
@@ -35,12 +35,12 @@
 
         <h1 class="sf-3 gf p-3">CLASES UTILITARIAS</h1>
 
-        <a class="link-s sf-2" href="#">Modificar tamaño,grosor</a>
+        <a class="link-s sf-2" href="/MKLibrary/enlaces/fuente.html">Modificar tamaño,grosor</a>
         <a class="link-s sf-2" href="/MKLibrary/enlaces/sombras.html">Crear Sombras</a>
         <a class="link-s sf-2 "href="/MKLibrary/enlaces/bordes.html">Crear Margenes,padding</a>
         <a class="link-s sf-2"href="#">Mover elementos</a>
-        <a class="link-s sf-2" href="#">Redondear elementos</a>
-        <a class="link-s sf-2" href="#">Ocultar Elementos</a>
+        <a class="link-s sf-2" href="/MKLibrary/enlaces/redondeo.html">Redondear elementos</a>
+        <a class="link-s sf-2" href="/MKLibrary/enlaces/ocultar.html">Ocultar Elementos</a>
         <a class="link-s sf-2" href="/MKLibrary/enlaces/colores.html">Colores de fondo</a>
     </div>
     <div style=" margin-left: 19.7%; padding-top: 11vh; height: 87vh; " class="cf-r5 p-5 par-5">
