--- a/enlaces/tarjetas.html
+++ b/enlaces/tarjetas.html
@@ -48,7 +48,7 @@
     <div style="margin-left: 19.7%; padding-top: 11vh; height: 200vh;  " class="cf-r5 p-5 par-5 ">
 
         <span class=" sf-5" style="text-align: center; margin: 10px;  color: rgb(0, 0, 0);">
-            TARJETAS 1 <br><br>
+            TARJETA 1 <br><br>
            TARJETA CON 1 COLUMNA Y TRES FILAS<br>
         
         
@@ -56,7 +56,7 @@
         <br>
 
 
-        <div class="  card-1    ">
+        <div class="  card-1 contenedor   ">
 
             <div class=" card-title  ">
                 <H1>TITULO</H1>
@@ -109,7 +109,7 @@
             <br>
             <br>
 
-            <div class=" card-2 ">
+            <div class=" card-2 contenedor ">
 
                 <div class=" card-left ">
                     <H1>BODY</H1>
