--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="/MKLibrary/scss/reset.css">
     <link rel="stylesheet" href="/MKLibrary/scss/style.css">
 
-    <title>Document</title>
+    <title>MK LIBRARY</title>
 </head>
 <body class="ttxt-Arial">
     <header class="fondo-menu fj">
