--- a/enlaces/badges.html
+++ b/enlaces/badges.html
@@ -47,9 +47,9 @@
 
     <div style="margin-left: 19.7%; padding-top: 11vh; height: 150vh;" class="cf-r5 p-5 par-5">
 
-        <H1 style="text-align: center; margin: 10px; color: rgb(0, 0, 0);">BADGES</H1>
+        <span class="sf-3" style="text-align: center; margin: 20px; color: rgb(0, 0, 0);">BADGES</span>
 
-        <div class="container">
+        <div class="container m-5">
 
             <h1>
                 Ejemplo de <span class=" badge-1 secundario ">BADGE-1</span>
