--- a/index.html
+++ b/index.html
@@ -16,15 +16,15 @@
             <img   class="ig p-3" src="img/1.png"   alt="MK LIBRARY" >
             <ul>
                 <li class="etiqueta rde-s"><a class="t-none"  href="#">INICIO</a></li>
-                <li class="etiqueta rde-s"><a class="t-none" href="#">CONTACTOS</a></li>
-                <li class="etiqueta rde-s"> <a class="t-none" href="#">ACERCA DE</a></li>
+                <li class="etiqueta rde-s"><a class="t-none" href="https://github.com/Isaac684/MKLibrary/graphs/contributors">CONTACTOS</a></li>
+                <li class="etiqueta rde-s"> <a class="t-none" href="https://github.com/Isaac684/MKLibrary">ACERCA DE</a></li>
                 <li class="etiqueta rde-s"> <a class="t-none" href="#">REDES SOCIALES</a></li>
             </ul>
             </div> 
     </header>
      
 
-    <div class="link barra-vertical mar-1 fj">
+    <div class="link barra-vertical mar-1 fj rde-s">
         <h1 class="sf-3 gf p-3">CREAR COMPONENTES</h1>
         <a class="link-s sf-2" href="#">Botones</a>
         <a class="link-s sf-2" href="/MKLibrary/enlaces/formularios.html">Formularios</a>
