--- a/enlaces/contenedores.html
+++ b/enlaces/contenedores.html
@@ -32,7 +32,7 @@
         <a class="link-s sf-2" href="/MKLibrary/enlaces/alertar.html">Alertas</a>
         <a class="link-s sf-2" href="/MKLibrary/enlaces/menus.html">Barras de Navegacion</a>
         <a class="link-s sf-2" href="/MKLibrary/enlaces/badges.html">Badges</a>
-        <a class="link-s sf-2" href="/MKLibrary/enlaces/contenedores.html">Containers</a>
+        <a class="link-s sf-2" href="#">Containers</a>
 
         <h1 class="sf-3 gf p-3">CLASES UTILITARIAS</h1>
 
@@ -44,12 +44,7 @@
         <a class="link-s sf-2" href="/MKLibrary/enlaces/ocultar.html">Ocultar Elementos</a>
         <a class="link-s sf-2" href="/MKLibrary/enlaces/colores.html">Colores de fondo</a>
     </div>
-    <div style=" margin-left: 19.7%; padding-top: 11vh; height: 87vh; " class="cf-r5 p-5 par-5">
-        <span  class="sf-5  ">MK LIBRARY</span>
-        <img style="margin: 50px 40px; padding: 0;" src="/MKLibrary/img/1.png" alt="">
-        <p>
-            
-        </p>
+    <div style=" margin-left: 19.7%; padding-top: 11vh; height: 100%; " class="cf-r5 p-5 par-5">
     </div>
 </body>
 </html>
