--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/MKLibrary/scss/reset.css">
     <link rel="stylesheet" href="/MKLibrary/scss/style.css">
+    <link rel="shortcut icon" href="/MKLibrary/img/icon.ico">
 
     <title>MK LIBRARY</title>
     <title>Documentación MKLibrary</title>
