--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
     <div class="link barra-vertical mar-1 fj rde-s">
         <h1 class="sf-3 gf p-3">CREAR COMPONENTES</h1>
-        <a class="link-s sf-2" href="#">Botones</a>
+        <a class="link-s sf-2" href="/MKLibrary/enlaces/botones.html">Botones</a>
         <a class="link-s sf-2" href="/MKLibrary/enlaces/formularios.html">Formularios</a>
         <a class="link-s sf-2" href="/MKLibrary/enlaces/tarjetas.html">Tarjetas</a>
         <a class="link-s sf-2" href="/MKLibrary/enlaces/alertar.html">Alertas</a>
