Enlazamiento de todas pas paginas

--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
 
         <a class="link-s sf-2" href="/MKLibrary/enlaces/fuente.html">Modificar tamaño,grosor</a>
         <a class="link-s sf-2" href="/MKLibrary/enlaces/sombras.html">Crear Sombras</a>
-        <a class="link-s sf-2 "href="/MKLibrary/enlaces/bordes.html">Crear Margenes,padding</a>
-        <a class="link-s sf-2"href="#">Mover elementos</a>
+        <a class="link-s sf-2" href="/MKLibrary/enlaces/bordes.html">Crear Margenes,padding</a>
+        <a class="link-s sf-2" href="/MKLibrary/enlaces/moverElementos.html">Mover elementos</a>
         <a class="link-s sf-2" href="/MKLibrary/enlaces/redondeo.html">Redondear elementos</a>
         <a class="link-s sf-2" href="/MKLibrary/enlaces/ocultar.html">Ocultar Elementos</a>
         <a class="link-s sf-2" href="/MKLibrary/enlaces/colores.html">Colores de fondo</a>
