--- a/enlaces/contenedores.html
+++ b/enlaces/contenedores.html
@@ -14,9 +14,9 @@
 <body class="ttxt-Arial">
     <header class="fondo-menu fj">
         <div class="navbar ">
-            <img   class="ig p-3" src="/MKLibrary/img/1.png"   alt="MK LIBRARY" >
+            <img   class="ig p-3" src="img/1.png"   alt="MK LIBRARY" >
             <ul>
-                <li class="etiqueta rde-s"><a class="t-none"  href="#">INICIO</a></li>
+                <li class="etiqueta rde-s"><a class="t-none"  href="index.html">INICIO</a></li>
                 <li class="etiqueta rde-s"><a class="t-none" href="https://github.com/Isaac684/MKLibrary/graphs/contributors">CONTACTOS</a></li>
                 <li class="etiqueta rde-s"> <a class="t-none" href="https://github.com/Isaac684/MKLibrary">ACERCA DE</a></li>
                 <li class="etiqueta rde-s"> <a class="t-none" href="#">REDES SOCIALES</a></li>
@@ -27,20 +27,20 @@
 
     <div class="link barra-vertical mar-1 fj rde-s">
         <h1 class="sf-3 gf p-3">CREAR COMPONENTES</h1>
-        <a class="link-s sf-2" href="#">Botones</a>
+        <a class="link-s sf-2" href="/MKLibrary/enlaces/botones.html">Botones</a>
         <a class="link-s sf-2" href="/MKLibrary/enlaces/formularios.html">Formularios</a>
         <a class="link-s sf-2" href="/MKLibrary/enlaces/tarjetas.html">Tarjetas</a>
         <a class="link-s sf-2" href="/MKLibrary/enlaces/alertar.html">Alertas</a>
         <a class="link-s sf-2" href="/MKLibrary/enlaces/menus.html">Barras de Navegacion</a>
         <a class="link-s sf-2" href="/MKLibrary/enlaces/badges.html">Badges</a>
-        <a class="link-s sf-2" href="#">Containers</a>
+        <a class="link-s sf-2" href="/MKLibrary/enlaces/contenedores.html">Containers</a>
 
         <h1 class="sf-3 gf p-3">CLASES UTILITARIAS</h1>
 
         <a class="link-s sf-2" href="/MKLibrary/enlaces/fuente.html">Modificar tamaño,grosor</a>
         <a class="link-s sf-2" href="/MKLibrary/enlaces/sombras.html">Crear Sombras</a>
-        <a class="link-s sf-2 "href="/MKLibrary/enlaces/bordes.html">Crear Margenes,padding</a>
-        <a class="link-s sf-2"href="#">Mover elementos</a>
+        <a class="link-s sf-2" href="/MKLibrary/enlaces/bordes.html">Crear Margenes,padding</a>
+        <a class="link-s sf-2" href="/MKLibrary/enlaces/moverElementos.html">Mover elementos</a>
         <a class="link-s sf-2" href="/MKLibrary/enlaces/redondeo.html">Redondear elementos</a>
         <a class="link-s sf-2" href="/MKLibrary/enlaces/ocultar.html">Ocultar Elementos</a>
         <a class="link-s sf-2" href="/MKLibrary/enlaces/colores.html">Colores de fondo</a>
