--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </header>
      
 
-    <div class="link barra-vertical mar-1 fj rde-s">
+    <div class="link barra-vertical secundario mar-1 fj rde-s">
         <h1 class="sf-3 gf p-3">CREAR COMPONENTES</h1>
         <a class="link-s sf-2" href="/MKLibrary/enlaces/botones.html">Botones</a>
         <a class="link-s sf-2" href="/MKLibrary/enlaces/formularios.html">Formularios</a>
