--- a/enlaces/redondeo.html
+++ b/enlaces/redondeo.html
@@ -13,7 +13,7 @@
 <body class="ttxt-Arial">
     <header class="fondo-menu fj">
         <div class="navbar ">
-            <img   class="ig p-3" src="img/1.png"   alt="MK LIBRARY" >
+            <img   class="ig p-3" src="/MKLibrary/"   alt="MK LIBRARY" >
             <ul>
                 <li class="etiqueta rde-s"><a class="t-none"  href="/MKLibrary/index.html">INICIO</a></li>
                 <li class="etiqueta rde-s"><a class="t-none" href="https://github.com/Isaac684/MKLibrary/graphs/contributors">CONTACTOS</a></li>
