--- a/enlaces/redondeo.html
+++ b/enlaces/redondeo.html
@@ -83,7 +83,7 @@
             <div class="rde-tl-m p-5 b-oscuro-1 sf-4 m-5 cf-claro">Elemento redondeado de esquina superior izquierda</div>
             <div class="rde-tr-m p-5 b-oscuro-1 sf-4 m-5 cf-claro">Elemento redondeado de esquina superior derecha</div>
             <div class="rde-bl-m p-5 b-oscuro-1 sf-4 m-5 cf-claro">Elemento redondeado de esquina inferior izquierda</div>
-            <div class="rde-bl-m p-5 b-oscuro-1 sf-4 m-5 cf-claro">Elemento redondeado de esquina inferior derecha</div>
+            <div class="rde-br-m p-5 b-oscuro-1 sf-4 m-5 cf-claro">Elemento redondeado de esquina inferior derecha</div>
         </div>
         <span class="sf-2 alert mab-5 mar-5">Codigo</span>
         <div class="ttxt-Arial sf-2" style="background-color: rgb(243, 243, 243); border: 1px solid rgb(153, 153, 153);">
