--- a/enlaces/contenedores.html
+++ b/enlaces/contenedores.html
@@ -61,7 +61,11 @@
         <h2 class="gf sf-3 mar-5">Contenedores-(pq, md, gn, xgn y xxgn)</h2>
         <p class="mar-5 sf-2">Estos contenedores se comportan de la siguiente manera, cuando son mayores que su resolucion minima se adapta 250px menos que sus breakpoints, pero al llegar a su propio breakpoints, toma un valor de 100% en la pantalla de espacio disponible</p>
         
-        <p class="mar-5 sf-2">Al alcanzar uno de estos puntos de quiebre el contenedor se adapta 250px menos que su tamaño actual esto para que no se desborde, pero al llegar a 540px su tamaño sera del 100% del espacio disponible en el contenedor padre. Se declara en la clase como "contenedor-{Cualquier subfijo ya sea pq,md etc}" pero esto sin incluir los corchetes.</p>
+        <p class="mar-5 sf-2">Este contenedor s e declara asi: <span class="gf">contenedor-pq</span> Esto se declara en el nombre de la clase y genera un contenedor pequeño </p>
+
+        <h2 class="gf sf-3 mar-5">Contenedor-100</h2>
+        <p class="mar-5 sf-2">Estos contenedor tiene la siguiente finalidad, es la de que al ser declarado <span class="gf">contenedor-100</span> en la clase tomara el 100% del total espacio disponible en el contenedor padre donde esta ubicado. Este contenedor es util sobre todo cuando se desea color en un body asi como en algun contenedor como un section o un aside ya que no tendremos que darle dimensiones se adaptara responsivamente. Cada contenedor a sido pensado en que el usuario le saque el maximo provecho esperamos sea de mucha ayuda para ti gracias!!</p>
+        
     </div>
 </body>
 </html>
