--- a/enlaces/bordes.html
+++ b/enlaces/bordes.html
@@ -13,9 +13,9 @@
 <body class="ttxt-Arial">
     <header class="fondo-menu fj">
         <div class="navbar ">
-            <img   class="ig p-3" src="/img/1.png"   alt="MK LIBRARY" >
+            <img   class="ig p-3" src="/MKLibrary/img/1.png"   alt="MK LIBRARY" >
             <ul>
-                <li class="etiqueta rde-s"><a class="t-none"  href="index.html">INICIO</a></li>
+                <li class="etiqueta rde-s"><a class="t-none"  href="/MKLibrary/index.html">INICIO</a></li>
                 <li class="etiqueta rde-s"><a class="t-none" href="https://github.com/Isaac684/MKLibrary/graphs/contributors">CONTACTOS</a></li>
                 <li class="etiqueta rde-s"> <a class="t-none" href="https://github.com/Isaac684/MKLibrary">ACERCA DE</a></li>
                 <li class="etiqueta rde-s"> <a class="t-none" href="#">REDES SOCIALES</a></li>
@@ -26,25 +26,24 @@
 
     <div class="link barra-vertical mar-1 fj rde-s">
         <h1 class="sf-3 gf p-3">CREAR COMPONENTES</h1>
-        <a class="link-s sf-2" href="/enlaces/botones.html">Botones</a>
-        <a class="link-s sf-2" href="/enlaces/formularios.html">Formularios</a>
-        <a class="link-s sf-2" href="/enlaces/tarjetas.html">Tarjetas</a>
-        <a class="link-s sf-2" href="/enlaces/alertar.html">Alertas</a>
-        <a class="link-s sf-2" href="/enlaces/menus.html">Barras de Navegacion</a>
-        <a class="link-s sf-2" href="/enlaces/badges.html">Badges</a>
-        <a class="link-s sf-2" href="/enlaces/contenedores.html">Containers</a>
+        <a class="link-s sf-2" href="/MKLibrary/enlaces/botones.html">Botones</a>
+        <a class="link-s sf-2" href="/MKLibrary/enlaces/formularios.html">Formularios</a>
+        <a class="link-s sf-2" href="/MKLibrary/enlaces/tarjetas.html">Tarjetas</a>
+        <a class="link-s sf-2" href="/MKLibrary/enlaces/alertar.html">Alertas</a>
+        <a class="link-s sf-2" href="/MKLibrary/enlaces/menus.html">Barras de Navegacion</a>
+        <a class="link-s sf-2" href="/MKLibrary/enlaces/badges.html">Badges</a>
+        <a class="link-s sf-2" href="/MKLibrary/enlaces/contenedores.html">Containers</a>
 
         <h1 class="sf-3 gf p-3">CLASES UTILITARIAS</h1>
 
-        <a class="link-s sf-2" href="/enlaces/fuente.html">Modificar tamaño,grosor</a>
-        <a class="link-s sf-2" href="/enlaces/sombras.html">Crear Sombras</a>
-        <a class="link-s sf-2" href="/enlaces/bordes.html">Crear Margenes,padding</a>
-        <a class="link-s sf-2" href="/enlaces/moverElementos.html">Mover elementos</a>
-        <a class="link-s sf-2" href="/enlaces/redondeo.html">Redondear elementos</a>
-        <a class="link-s sf-2" href="/enlaces/ocultar.html">Ocultar Elementos</a>
-        <a class="link-s sf-2" href="/enlaces/colores.html">Colores de fondo</a>
+        <a class="link-s sf-2" href="/MKLibrary/enlaces/fuente.html">Modificar tamaño,grosor</a>
+        <a class="link-s sf-2" href="/MKLibrary/enlaces/sombras.html">Crear Sombras</a>
+        <a class="link-s sf-2" href="/MKLibrary/enlaces/bordes.html">Crear Margenes,padding</a>
+        <a class="link-s sf-2" href="/MKLibrary/enlaces/moverElementos.html">Mover elementos</a>
+        <a class="link-s sf-2" href="/MKLibrary/enlaces/redondeo.html">Redondear elementos</a>
+        <a class="link-s sf-2" href="/MKLibrary/enlaces/ocultar.html">Ocultar Elementos</a>
+        <a class="link-s sf-2" href="/MKLibrary/enlaces/colores.html">Colores de fondo</a>
     </div>
-
     <div style="margin-left: 19.7%; padding-top: 11vh; height: 100%;" class="cf-r5 p-5 par-5">
             <h1 class="gf sf-5">Margenes</h1>
             <p class="mar-5 sf-3">Los margenes en esta libreria estan divididos en dos tipos <span class="gf">margin general y margin especifico.</span> <span>Cada uno con un prefijo como m-1, mar-1 etc. Donde la m representa el tipo de margen, o los tipos de margen, ejemplo si coloca m-1, se esta diciendo que quiere un margen a los 4 lados o lo que se conoce como un margen general, y el -1 (Guion y un numero, que este va desde 1 hasta el 5) representa el tamaño en pixeles que desea siendo 1, el mas pequeño, igual a 13px, hasta 5 siendo este de 16px el mas grande.</span></p>
