--- a/enlaces/fuente.html
+++ b/enlaces/fuente.html
@@ -13,9 +13,9 @@
 <body class="ttxt-Arial">
     <header class="fondo-menu fj">
         <div class="navbar ">
-            <img   class="ig p-3" src="/img/1.png"   alt="MK LIBRARY" >
+            <img   class="ig p-3" src="/MKLibrary/img/1.png"   alt="MK LIBRARY" >
             <ul>
-                <li class="etiqueta rde-s"><a class="t-none"  href="index.html">INICIO</a></li>
+                <li class="etiqueta rde-s"><a class="t-none"  href="/MKLibrary/index.html">INICIO</a></li>
                 <li class="etiqueta rde-s"><a class="t-none" href="https://github.com/Isaac684/MKLibrary/graphs/contributors">CONTACTOS</a></li>
                 <li class="etiqueta rde-s"> <a class="t-none" href="https://github.com/Isaac684/MKLibrary">ACERCA DE</a></li>
                 <li class="etiqueta rde-s"> <a class="t-none" href="#">REDES SOCIALES</a></li>
@@ -26,24 +26,42 @@
 
     <div class="link barra-vertical mar-1 fj rde-s">
         <h1 class="sf-3 gf p-3">CREAR COMPONENTES</h1>
-        <a class="link-s sf-2" href="/enlaces/botones.html">Botones</a>
-        <a class="link-s sf-2" href="/enlaces/formularios.html">Formularios</a>
-        <a class="link-s sf-2" href="/enlaces/tarjetas.html">Tarjetas</a>
-        <a class="link-s sf-2" href="/enlaces/alertar.html">Alertas</a>
-        <a class="link-s sf-2" href="/enlaces/menus.html">Barras de Navegacion</a>
-        <a class="link-s sf-2" href="/enlaces/badges.html">Badges</a>
-        <a class="link-s sf-2" href="/enlaces/contenedores.html">Containers</a>
+        <a class="link-s sf-2" href="/MKLibrary/enlaces/botones.html">Botones</a>
+        <a class="link-s sf-2" href="/MKLibrary/enlaces/formularios.html">Formularios</a>
+        <a class="link-s sf-2" href="/MKLibrary/enlaces/tarjetas.html">Tarjetas</a>
+        <a class="link-s sf-2" href="/MKLibrary/enlaces/alertar.html">Alertas</a>
+        <a class="link-s sf-2" href="/MKLibrary/enlaces/menus.html">Barras de Navegacion</a>
+        <a class="link-s sf-2" href="/MKLibrary/enlaces/badges.html">Badges</a>
+        <a class="link-s sf-2" href="/MKLibrary/enlaces/contenedores.html">Containers</a>
 
         <h1 class="sf-3 gf p-3">CLASES UTILITARIAS</h1>
 
-        <a class="link-s sf-2" href="/enlaces/fuente.html">Modificar tamaño,grosor</a>
-        <a class="link-s sf-2" href="/enlaces/sombras.html">Crear Sombras</a>
-        <a class="link-s sf-2" href="/enlaces/bordes.html">Crear Margenes,padding</a>
-        <a class="link-s sf-2" href="/enlaces/moverElementos.html">Mover elementos</a>
-        <a class="link-s sf-2" href="/enlaces/redondeo.html">Redondear elementos</a>
-        <a class="link-s sf-2" href="/enlaces/ocultar.html">Ocultar Elementos</a>
-        <a class="link-s sf-2" href="/enlaces/colores.html">Colores de fondo</a>
+        <a class="link-s sf-2" href="/MKLibrary/enlaces/fuente.html">Modificar tamaño,grosor</a>
+        <a class="link-s sf-2" href="/MKLibrary/enlaces/sombras.html">Crear Sombras</a>
+        <a class="link-s sf-2" href="/MKLibrary/enlaces/bordes.html">Crear Margenes,padding</a>
+        <a class="link-s sf-2" href="/MKLibrary/enlaces/moverElementos.html">Mover elementos</a>
+        <a class="link-s sf-2" href="/MKLibrary/enlaces/redondeo.html">Redondear elementos</a>
+        <a class="link-s sf-2" href="/MKLibrary/enlaces/ocultar.html">Ocultar Elementos</a>
+        <a class="link-s sf-2" href="/MKLibrary/enlaces/colores.html">Colores de fondo</a>
     </div>
+    <div style="margin-left: 19.7%; padding-top: 11vh; height: 318vh;display: flex; flex-direction: column; " class="cf-r5 p-5 par-5">
+        <span class="sf-5 mab-5">Fuentes</span>
+        <span class="sf-3 ta-justify mab-5">Aqui podras observar las clases para cambiar el tamaño, fuente, color y grosor de la letra para tus paginas</span>
+        <span class="sf-3 gf mab-5">Colores</span>
+        <span class="sf-2 alert mab-5">Para cambiar el color de la letra se utiliza la clase <span class="color-font-peligro">color-font-</span>"color", ahora un ejemplo:</span>
+        <div class="mde-5">
+            <div class="form" style="background-color: rgb(243, 243, 243);">
+                <span class="color-font-primario m-5 sf-2">Texto en color primario</span>
+                <span class="color-font-secundario m-5 sf-2">Texto en color secundario</span>
+                <span class="color-font-terceario m-5 sf-2">Texto en color terciario</span>
+                <span class="color-font-informacion m-5 sf-2">Texto en color de informacion</span>
+                <span class="color-font-peligro m-5 sf-2">Texto en color de peligro</span>
+                <span class="color-font-advertencia m-5 sf-2">Texto en color de advertencia</span>
+                <span class="color-font-exito m-5 sf-2">Texto en color de exito</span>
+                <span class="color-font-claro m-5 sf-2">Texto en color claro</span>
+                <span class="color-font-oscuro m-5 sf-2">Texto en color oscuro</span>
+            </div>
+        </div>
         <span class="sf-2 alert mab-5 mar-5">Codigo</span>
         <div class="ttxt-Arial sf-2" style="background-color: rgb(243, 243, 243); border: 1px solid rgb(153, 153, 153);">
             <div class="m-5">
