--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
             <img   class="ig p-3" src="img/1.png"   alt="MK LIBRARY" >
             <ul>
                 <li class="etiqueta rde-s"><a class="t-none"  href="index.html">INICIO</a></li>
-                <li class="etiqueta rde-s"><a class="t-none" href="https://github.com/Isaac684/MKLibrary/graphs/contributors">DOCUMENTACION</a></li>
+                <li class="etiqueta rde-s"><a class="t-none" href="/MKLibrary/enlaces/documentacion.html">DOCUMENTACION</a></li>
                 <li class="etiqueta rde-s"> <a class="t-none" href="https://github.com/Isaac684/MKLibrary">ACERCA DE</a></li>
                 <li class="etiqueta rde-s"> <a class="t-none" href="#">REDES SOCIALES</a></li>
             </ul>
             </div> 
     </header>
      
-    
+
 
    
 
