--- a/index.html
+++ b/index.html
@@ -93,5 +93,17 @@
             </div> 
         </div>
     </div>
+
+    <footer style="background-color: gray;text-align: center; opacity: .8; " class=" p-5  s sf-2 ">
+        <span>
+            &copy; 2023 MK LIBRARY TODOS LOS DERECHOS RESERVADOS 
+        </span><br><br>
+        <br>
+        
+        <span>
+            &copy; 2023 MK LIBRARY TODOS LOS DERECHOS RESERVADOS 
+        </span>
+      
+    </footer>
 </body>
 </html>
