Correccion del menu

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <img   class="ig p-3" src="./img/1.png"   alt="MK LIBRARY" >
             <ul>
                 <li class="etiqueta rde-s"><a class="t-none"  href="./index.html">INICIO</a></li>
-                <li class="etiqueta rde-s"><a class="t-none" href="./enlaces/botones.html">DOCUMENTACION</a></li>
+                <li class="etiqueta rde-s"><a class="t-none" href="./enlaces/documentacion.html">DOCUMENTACION</a></li>
                 <li class="etiqueta rde-s"> <a class="t-none" href="https://github.com/Isaac684/MKLibrary/graphs/contributors">ACERCA DE</a></li>
                 <li class="etiqueta rde-s"> <a class="t-none" href="https://github.com/Isaac684/MKLibrary">GITHUB</a></li>
             </ul>
