--- a/enlaces/fuente.html
+++ b/enlaces/fuente.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./scss/reset.css">
-    <link rel="stylesheet" href="./scss/style.css">
-    <link rel="shortcut icon" href="./img/icon.ico">
+    <link rel="stylesheet" href="../scss/reset.css">
+    <link rel="stylesheet" href="../scss/style.css">
+    <link rel="shortcut icon" href="../img/icon.ico">
 
     <title>MK LIBRARY</title>
     <title>Documentación MKLibrary</title>
@@ -14,10 +14,10 @@
 <body class="ttxt-Arial">
     <header class="fondo-menu fj">
         <div class="navbar ">
-            <img   class="ig p-3" src="./img/1.png"   alt="MK LIBRARY" >
+            <img   class="ig p-3" src="../img/1.png"   alt="MK LIBRARY" >
             <ul>
-                <li class="etiqueta rde-s"><a class="t-none"  href="./index.html">INICIO</a></li>
-                <li class="etiqueta rde-s"><a class="t-none" href="./enlaces/botones.html">DOCUMENTACION</a></li>
+                <li class="etiqueta rde-s"><a class="t-none"  href="../index.html">INICIO</a></li>
+                <li class="etiqueta rde-s"><a class="t-none" href="./documentacion.html">DOCUMENTACION</a></li>
                 <li class="etiqueta rde-s"> <a class="t-none" href="https://github.com/Isaac684/MKLibrary/graphs/contributors">ACERCA DE</a></li>
                 <li class="etiqueta rde-s"> <a class="t-none" href="https://github.com/Isaac684/MKLibrary">GITHUB</a></li>
             </ul>
@@ -27,23 +27,23 @@
 
     <div class="link barra-vertical mar-1 fj rde-s">
         <h1 class="sf-3 gf p-3">CREAR COMPONENTES</h1>
-        <a class="link-s sf-2" href="/MKLibrary/enlaces/botones.html">Botones</a>
-        <a class="link-s sf-2" href="/MKLibrary/enlaces/formularios.html">Formularios</a>
-        <a class="link-s sf-2" href="/MKLibrary/enlaces/tarjetas.html">Tarjetas</a>
-        <a class="link-s sf-2" href="/MKLibrary/enlaces/alertar.html">Alertas</a>
-        <a class="link-s sf-2" href="/MKLibrary/enlaces/menus.html">Barras de Navegacion</a>
-        <a class="link-s sf-2" href="/MKLibrary/enlaces/badges.html">Badges</a>
-        <a class="link-s sf-2" href="/MKLibrary/enlaces/contenedores.html">Containers</a>
+        <a class="link-s sf-2" href="./botones.html">Botones</a>
+        <a class="link-s sf-2" href="./formularios.html">Formularios</a>
+        <a class="link-s sf-2" href="./tarjetas.html">Tarjetas</a>
+        <a class="link-s sf-2" href="./alertar.html">Alertas</a>
+        <a class="link-s sf-2" href="./menus.html">Barras de Navegacion</a>
+        <a class="link-s sf-2" href="./badges.html">Badges</a>
+        <a class="link-s sf-2" href="./contenedores.html">Containers</a>
 
         <h1 class="sf-3 gf p-3">CLASES UTILITARIAS</h1>
 
-        <a class="link-s sf-2" href="/MKLibrary/enlaces/fuente.html">Modificar tamaño,grosor</a>
-        <a class="link-s sf-2" href="/MKLibrary/enlaces/sombras.html">Crear Sombras</a>
-        <a class="link-s sf-2" href="/MKLibrary/enlaces/bordes.html">Crear Margenes,padding</a>
-        <a class="link-s sf-2" href="/MKLibrary/enlaces/moverElementos.html">Mover elementos</a>
-        <a class="link-s sf-2" href="/MKLibrary/enlaces/redondeo.html">Redondear elementos</a>
-        <a class="link-s sf-2" href="/MKLibrary/enlaces/ocultar.html">Ocultar Elementos</a>
-        <a class="link-s sf-2" href="/MKLibrary/enlaces/colores.html">Colores de fondo</a>
+        <a class="link-s sf-2" href="./fuente.html">Modificar tamaño,grosor</a>
+        <a class="link-s sf-2" href="./sombras.html">Crear Sombras</a>
+        <a class="link-s sf-2" href="./bordes.html">Crear Margenes,padding</a>
+        <a class="link-s sf-2" href="./moverElementos.html">Mover elementos</a>
+        <a class="link-s sf-2" href="./redondeo.html">Redondear elementos</a>
+        <a class="link-s sf-2" href="./ocultar.html">Ocultar Elementos</a>
+        <a class="link-s sf-2" href="./colores.html">Colores de fondo</a>
     </div>
     <div style="margin-left: 19.7%; padding-top: 11vh; height: 318vh;display: flex; flex-direction: column; " class="cf-r5 p-5 par-5">
         <span class="sf-5 mab-5">Fuentes</span>
