--- a/enlaces/documentacion.html
+++ b/enlaces/documentacion.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="/MKLibrary/scss/style.css">
     <link rel="shortcut icon" href="/MKLibrary/img/icon.ico">
 
-    <title>MENUS</title>
+    <title>DOCUMENTACION</title>
 
 </head>
 <body class="ttxt-Arial">
