--- a/enlaces/colores.html
+++ b/enlaces/colores.html
@@ -43,7 +43,7 @@
         <a class="link-s sf-2" href="./moverElementos.html">Mover elementos</a>
         <a class="link-s sf-2" href="./redondeo.html">Redondear elementos</a>
         <a class="link-s sf-2" href="./ocultar.html">Ocultar Elementos</a>
-        <a class="link-s sf-2" href="./colores.html">Colores de fondo</a>
+        <a class="link-s sf-2" style="background-color: #3c91e6ff;" href="./colores.html">Colores de fondo</a>
     </div>
 
 
