--- a/enlaces/redondeo.html
+++ b/enlaces/redondeo.html
@@ -41,7 +41,7 @@
         <a class="link-s sf-2" href="./sombras.html">Crear Sombras</a>
         <a class="link-s sf-2" href="./bordes.html">Crear Margenes,padding</a>
         <a class="link-s sf-2" href="./moverElementos.html">Mover elementos</a>
-        <a class="link-s sf-2" href="./redondeo.html">Redondear elementos</a>
+        <a class="link-s sf-2" style="background-color: #3c91e6ff;" href="./redondeo.html">Redondear elementos</a>
         <a class="link-s sf-2" href="./ocultar.html">Ocultar Elementos</a>
         <a class="link-s sf-2" href="./colores.html">Colores de fondo</a>
     </div>
