--- a/enlaces/formularios.html
+++ b/enlaces/formularios.html
@@ -28,7 +28,7 @@
     <div class="link barra-vertical mar-1 fj rde-s">
         <h1 class="sf-3 gf p-3">CREAR COMPONENTES</h1>
         <a class="link-s sf-2" href="./botones.html">Botones</a>
-        <a class="link-s sf-2" href="./formularios.html">Formularios</a>
+        <a class="link-s sf-2" style="background-color: #3c91e6ff;" href="./formularios.html">Formularios</a>
         <a class="link-s sf-2" href="./tarjetas.html">Tarjetas</a>
         <a class="link-s sf-2" href="./alertar.html">Alertas</a>
         <a class="link-s sf-2" href="./menus.html">Barras de Navegacion</a>
