--- a/enlaces/fuente.html
+++ b/enlaces/fuente.html
@@ -37,7 +37,7 @@
 
         <h1 class="sf-3 gf p-3">CLASES UTILITARIAS</h1>
 
-        <a class="link-s sf-2" href="./fuente.html">Modificar tamaño,grosor</a>
+        <a class="link-s sf-2" style="background-color: #3c91e6ff;" href="./fuente.html">Modificar tamaño,grosor</a>
         <a class="link-s sf-2" href="./sombras.html">Crear Sombras</a>
         <a class="link-s sf-2" href="./bordes.html">Crear Margenes,padding</a>
         <a class="link-s sf-2" href="./moverElementos.html">Mover elementos</a>
