--- a/enlaces/menus.html
+++ b/enlaces/menus.html
@@ -31,7 +31,7 @@
         <a class="link-s sf-2" href="./formularios.html">Formularios</a>
         <a class="link-s sf-2" href="./tarjetas.html">Tarjetas</a>
         <a class="link-s sf-2" href="./alertar.html">Alertas</a>
-        <a class="link-s sf-2" href="./menus.html">Barras de Navegacion</a>
+        <a class="link-s sf-2" style="background-color: #3c91e6ff;" href="./menus.html">Barras de Navegacion</a>
         <a class="link-s sf-2" href="./badges.html">Badges</a>
         <a class="link-s sf-2" href="./contenedores.html">Containers</a>
 
