--- a/enlaces/ocultar.html
+++ b/enlaces/ocultar.html
@@ -42,7 +42,7 @@
         <a class="link-s sf-2" href="./bordes.html">Crear Margenes,padding</a>
         <a class="link-s sf-2" href="./moverElementos.html">Mover elementos</a>
         <a class="link-s sf-2" href="./redondeo.html">Redondear elementos</a>
-        <a class="link-s sf-2" href="./ocultar.html">Ocultar Elementos</a>
+        <a class="link-s sf-2" style="background-color: #3c91e6ff;" href="./ocultar.html">Ocultar Elementos</a>
         <a class="link-s sf-2" href="./colores.html">Colores de fondo</a>
     </div>
     <div style=" margin-left: 19.7%; padding-top: 11vh; height: 87vh;display: flex; flex-direction: column;" class="cf-r5 p-5 par-5">
