--- a/enlaces/tarjetas.html
+++ b/enlaces/tarjetas.html
@@ -29,7 +29,7 @@
         <h1 class="sf-3 gf p-3">CREAR COMPONENTES</h1>
         <a class="link-s sf-2" href="./botones.html">Botones</a>
         <a class="link-s sf-2" href="./formularios.html">Formularios</a>
-        <a class="link-s sf-2" href="./tarjetas.html">Tarjetas</a>
+        <a class="link-s sf-2" style="background-color: #3c91e6ff;" href="./tarjetas.html">Tarjetas</a>
         <a class="link-s sf-2" href="./alertar.html">Alertas</a>
         <a class="link-s sf-2" href="./menus.html">Barras de Navegacion</a>
         <a class="link-s sf-2" href="./badges.html">Badges</a>
