--- a/enlaces/contenedores.html
+++ b/enlaces/contenedores.html
@@ -9,7 +9,7 @@
     <link rel="shortcut icon" href="../img/icon.ico">
 
     <title>MK LIBRARY</title>
-    <title>Documentación MKLibrary</title>
+    <title>DocumentaciónS MKLibrary</title>
 </head>
 <body class="ttxt-Arial">
     <header class="fondo-menu fj">
