Compilacion de archivo style.scss

--- a/index.html
+++ b/index.html
@@ -94,8 +94,8 @@
         </div>
     </div>
 
-    <footer style="background-color: gray;text-align: center; opacity: .8; " class=" p-5  s sf-2 ">
-        <span>
+    <footer style="background-color: gray;text-align: center; opacity: .8; " class="pos-rel p-5  s sf-2 ">
+        <span class="centrado">
             &copy; 2023 MK LIBRARY TODOS LOS DERECHOS RESERVADOS 
         </span><br><br>
         <br>
